[gd_scene load_steps=13 format=2]

[ext_resource path="res://script/main.gd" type="Script" id=1]
[ext_resource path="res://scene/ps_2.tscn" type="PackedScene" id=2]
[ext_resource path="res://assest/white_cercle.png" type="Texture" id=3]
[ext_resource path="res://assest/bounde.png" type="Texture" id=4]
[ext_resource path="res://assest/font/font_size_150.tres" type="DynamicFont" id=5]
[ext_resource path="res://assest/cercle.png" type="Texture" id=6]
[ext_resource path="res://assest/bar(white).png" type="Texture" id=7]
[ext_resource path="res://assest/sound/score.wav" type="AudioStream" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 79.2059
height = 8.60944

[sub_resource type="CapsuleShape2D" id=2]
radius = 45.9892
height = 55.4548

[sub_resource type="CapsuleShape2D" id=3]
radius = 68.0813
height = 10.5834

[sub_resource type="CapsuleShape2D" id=4]
radius = 65.0812
height = 292.502

[node name="main" type="Node"]
script = ExtResource( 1 )

[node name="ps_2" parent="." instance=ExtResource( 2 )]

[node name="center_cercle" type="Sprite" parent="."]
position = Vector2( 540, 884 )
texture = ExtResource( 3 )

[node name="center_cercle2" type="Sprite" parent="."]
position = Vector2( 540, 884 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )

[node name="number1" type="Area2D" parent="."]
modulate = Color( 1, 0, 0.439216, 1 )
position = Vector2( 540, 884 )
rotation = -1.45327

[node name="numeber1_c" type="CollisionShape2D" parent="number1"]
visible = false
position = Vector2( 138.952, -341.505 )
rotation = 1.52381
shape = SubResource( 1 )

[node name="number2" type="Area2D" parent="."]
modulate = Color( 1, 0, 0.439216, 1 )
position = Vector2( 540, 884 )
rotation = 3.14159

[node name="numeber2_c" type="CollisionShape2D" parent="number2"]
visible = false
position = Vector2( 6.25378, -380.011 )
rotation = 3.14789
shape = SubResource( 2 )

[node name="number3" type="Area2D" parent="."]
modulate = Color( 1, 0, 0.439216, 1 )
position = Vector2( 540, 884 )
rotation = 1.27409

[node name="numeber3_c" type="CollisionShape2D" parent="number3"]
visible = false
position = Vector2( -66.0635, -363.779 )
rotation = 1.56956
shape = SubResource( 3 )

[node name="player" type="KinematicBody2D" parent="."]
position = Vector2( 540, 884 )
rotation = 5.16082

[node name="player_s" type="Sprite" parent="player"]
modulate = Color( 0, 0.882353, 1, 1 )
position = Vector2( 0, 103.714 )
scale = Vector2( 1, 1.2 )
texture = ExtResource( 4 )

[node name="player_c" type="CollisionShape2D" parent="player"]
visible = false
position = Vector2( 9.46478, -355.039 )
rotation = 1.57108
shape = SubResource( 4 )

[node name="numbers" type="Node" parent="."]
editor/display_folded = true

[node name="number1" type="Label" parent="numbers"]
modulate = Color( 1, 0, 0.376471, 1 )
margin_left = 20.0
margin_top = 650.0
margin_right = 420.0
margin_bottom = 955.0
rect_rotation = -0.239886
custom_fonts/font = ExtResource( 5 )
text = "5
"
align = 1

[node name="number2" type="Label" parent="numbers"]
modulate = Color( 1, 0, 0.376471, 1 )
margin_left = 300.0
margin_top = 1206.27
margin_right = 753.0
margin_bottom = 1357.27
custom_fonts/font = ExtResource( 5 )
text = "1"
align = 1

[node name="number3" type="Label" parent="numbers"]
modulate = Color( 1, 0, 0.376471, 1 )
margin_left = 620.0
margin_top = 650.0
margin_right = 1118.0
margin_bottom = 801.0
rect_rotation = 0.181205
custom_fonts/font = ExtResource( 5 )
text = "2"
align = 1

[node name="mm_s" type="Sprite" parent="."]
modulate = Color( 1, 0, 0.329412, 1 )
position = Vector2( 538.992, 884.128 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 6 )

[node name="mm" type="Label" parent="."]
margin_left = 382.194
margin_top = 816.981
margin_right = 659.194
margin_bottom = 967.981
custom_fonts/font = ExtResource( 5 )
text = "Max"

[node name="score_label" type="Label" parent="."]
editor/display_folded = true
margin_left = 64.721
margin_top = 133.525
margin_right = 711.721
margin_bottom = 284.525
custom_fonts/font = ExtResource( 5 )
text = "Score : "

[node name="score" type="Label" parent="score_label"]
margin_left = 611.0
margin_top = 7.0
margin_right = 954.0
margin_bottom = 158.0
custom_fonts/font = ExtResource( 5 )
text = "0"
align = 1

[node name="time_c" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_right = 1080.0
margin_bottom = 150.0
rect_scale = Vector2( 1, 0.3 )

[node name="time_bar" type="TextureProgress" parent="time_c"]
modulate = Color( 0.188235, 1, 0.752941, 1 )
margin_right = 1080.0
margin_bottom = 150.0
step = 0.1
texture_progress = ExtResource( 7 )

[node name="score_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[connection signal="body_entered" from="number1" to="." method="_on_number1_body_entered"]
[connection signal="body_exited" from="number1" to="." method="_on_number1_body_exited"]
[connection signal="body_entered" from="number2" to="." method="_on_number2_body_entered"]
[connection signal="body_exited" from="number2" to="." method="_on_number2_body_exited"]
[connection signal="body_entered" from="number3" to="." method="_on_number3_body_entered"]
[connection signal="body_exited" from="number3" to="." method="_on_number3_body_exited"]
